--- a/public/css/CheckupSekarang/LansiaStyle.css
+++ b/public/css/CheckupSekarang/LansiaStyle.css
@@ -15,11 +15,13 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 10px;
+
     position: absolute;
     width: 323px;
     height: 581px;
     left: -51px;
     top: 137px;
+
     background: rgba(196, 196, 196, 0.25);
     border-radius: 30px;
 }
@@ -27,8 +29,10 @@
 .menu-text {
     position: absolute;
     left: 135px;
+
     font-size: 40px;
     font-family: Metropolis, Arial, Helvetica, sans-serif;
+
     color: rgba(0, 0, 0, 0.7);
 }
 
@@ -38,6 +42,7 @@
     height: 0px;
     left: 97px;
     top: 65px;
+
     border: 1px solid rgba(0, 0, 0, 0.3);
     transform: rotate(0.02deg);
 }
@@ -47,14 +52,16 @@
     width: 221px;
     height: 64px;
     left: 75px;
-    display: flex;
-    justify-content: center;
+    display: flex;  
+    justify-content: center;  
     align-items: center;
     font-family: Metropolis, Arial, Helvetica, sans-serif;
     font-size: 18px;
     color: #FFFFFF;
+
     background: #2483F3;
     border-radius: 70px;
+
     cursor: pointer;
     transition-duration: 0.2s;
 }
@@ -67,13 +74,11 @@
 .button-riwayat {
     position: absolute;
     top: 190px;
-    text-decoration: none;
 }
 
 .button-cek-up {
     position: absolute;
     top: 270px;
-    text-decoration: none;
 }
 
 .button-emergency {
@@ -88,6 +93,7 @@
     height: 320px;
     left: 323px;
     top: 137px;
+
     background: rgba(196, 196, 196, 0.25);
     border-radius: 30px;
 }
@@ -96,18 +102,37 @@
     position: absolute;
     left: 20px;
     top: 30px;
+
     font-size: 18px;
     line-height: 21px;
     font-weight: bold;
+
     color: #000000;
+}
+
+.list-obat {
+    position: absolute;
+    left: 20px;
+    top: 70px;
+
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: bold;
+
+    color: rgba(0, 0, 0, 0.61);
+}
+
+.nomor-list-obat {
+    width: 30px;
 }
 
 .calendar-box {
     position: absolute;
     width: 253px;
-    height: 253px;
+    height: 320px;
     left: 733px;
     top: 137px;
+
     background: rgba(196, 196, 196, 0.25);
     border-radius: 30px;
 }
@@ -122,6 +147,7 @@
     position: absolute;
     left: 323px;
     top: 480px;
+
     background: linear-gradient(0deg, rgba(37, 203, 63, 0.8), rgba(37, 203, 63, 0.8));
     border-radius: 20px;
 }
@@ -132,6 +158,7 @@
     height: 100px;
     left: 44px;
     top: -80px;
+
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     border-radius: 50px;
@@ -144,6 +171,7 @@
     height: 100px;
     left: 124px;
     top: -20px;
+
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3));
     border-radius: 50px;
 }
@@ -152,6 +180,18 @@
     position: absolute;
     left: 20px;
     top: 25px;
+
+    font-size: 20px;
+    line-height: 18px;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+}
+
+.informasi-isi {
+    position: absolute;
+    left: 20px;
+    top: 55px;
+
     font-size: 20px;
     line-height: 18px;
     letter-spacing: 1px;
@@ -162,6 +202,7 @@
     position: absolute;
     left: 558px;
     top: 480px;
+
     background: linear-gradient(0deg, rgba(37, 183, 203, 0.84), rgba(37, 183, 203, 0.84));
     border-radius: 20px;
 }
@@ -170,6 +211,7 @@
     position: absolute;
     left: 323px;
     top: 610px;
+
     background: linear-gradient(0deg, rgba(170, 37, 203, 0.81), rgba(170, 37, 203, 0.81));
     border-radius: 20px;
 }
@@ -178,6 +220,7 @@
     position: absolute;
     left: 558px;
     top: 610px;
+
     background: linear-gradient(0deg, rgba(203, 37, 37, 0.81), rgba(203, 37, 37, 0.81));
     border-radius: 20px;
 }
@@ -185,9 +228,11 @@
 .notes-box {
     width: 210px;
     height: 230px;
+
     position: absolute;
     left: 795px;
     top: 480px;
+
     background: rgba(196, 196, 196, 0.25);
     border-radius: 70px 0px 70px 30px;
 }
@@ -197,9 +242,20 @@
     font-weight: bold;
     color: rgba(18, 18, 18, 0.75);
     font-size: 20px;
+
     position: absolute;
     left: 30px;
     top: 25px;
+}
+
+.list-notes {
+    color: #5200FF;
+    font-weight: bold;
+    font-size: 13px;
+
+    position: absolute;
+    left: 20px;
+    top: 60px; 
 }
 
 .button-plus {
@@ -215,12 +271,21 @@
 
 .circle-profil {
     position: absolute;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     left: 1400px;
-    top: 40px;
+    top: 29px;
+
     background: #FFC2F9;
     border-radius: 100px;
+}
+
+.foto-profil {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 1400px;
+    top: 29px;
 }
 
 .box-name {
@@ -229,10 +294,12 @@
     height: 27px;
     left: 1227px;
     top: 47px;
+
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.22);
     box-sizing: border-box;
     border-radius: 70px;
+
     text-align: center;
     font-family: Metropolis, Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -240,8 +307,11 @@
     font-size: 22px;
     line-height: 108.1%;
     /* or 15px */
+
     letter-spacing: 1px;
+
     color: rgba(0, 0, 0, 0.54);
+
 }
 
 .box-profil-1 {
@@ -250,8 +320,24 @@
     height: 360px;
     left: 1040px;
     top: 100px;
+
     background: #F2F3F7;
     border-radius: 30px;
+}
+
+.data-diri {
+    position: absolute;
+    top: 170px;
+    left: 15px;
+
+    line-height: 19px;
+
+    font-size: 13px;
+    color: rgba(0, 0, 0, 0.61);
+}
+
+.judul-data-diri {
+    width: 120px;
 }
 
 .box-profil-2 {
@@ -260,9 +346,37 @@
     height: 165px;
     left: 1040px;
     top: 100px;
+
     background: linear-gradient(101.84deg, #8E97FD 2.78%, #6E3BFF 98.95%);
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
+}
+
+.square-profil {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 343px;
+    top: 40px;
+
+    background: #FFC2F9;
+    border-radius: 100px;
+}
+
+.data-diri-singkat {
+    position: absolute;
+    top: 60px;
+    left: 20px;
+
+    letter-spacing: 1.5px;
+
+    color: #FFFFFF;
+}
+
+.data-nama {
+    font-size: 30px;
+
+    letter-spacing: 3.0px;
 }
 
 .box-cek-terakhir {
@@ -271,6 +385,7 @@
     height: 100px;
     left: 1040px;
     top: 490px;
+
     background: #A990DD;
     border-radius: 30px;
 }
@@ -281,6 +396,7 @@
     height: 100px;
     left: 1040px;
     top: 610px;
+
     background: #87B9E7;
     border-radius: 30px;
 }
@@ -289,6 +405,7 @@
     position: absolute;
     left: 40px;
     top: 18px;
+
     font-size: 15px;
     font-weight: bold;
 }
@@ -299,68 +416,22 @@
     top: 40px;
 }
 
+.tanggal-checkup{
+    position: absolute;
+    left: 70px;
+    top: 40px;
+}
+
 .clock-logo {
     position: absolute;
     left: 37px;
     top: 65px;
 }
 
-.foto-profil {
+.waktu-checkup{
     position: absolute;
-    width: 40px;
-    height: 40px;
-    left: 1400px;
-    top: 40px;
-}
-
-.square-profil {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 343px;
-    top: 40px;
-    background: #FFC2F9;
-    border-radius: 100px;
-}
-
-.nama-profil {
-    position: absolute;
-    left: 30px;
-    top: 40px;
-    line-height: 24px;
-    letter-spacing: 0.5px;
-    font-size: 35px;
-    color: #FFFFFF;
-}
-
-.usia-profil {
-    position: absolute;
-    left: 35px;
-    top: 80px;
-    line-height: 18px;
-    letter-spacing: 0.5px;
-    font-size: 20px;
-    color: #FFFFFF;
-}
-
-.data-profil {
-    position: relative;
-    top: 173px;
-    left: 20px;
-    font-size: 11px;
-    line-height: 18px;
-    letter-spacing: 0.05em;
-    color: rgba(0, 0, 0, 0.61);
-}
-
-.isi-informasi {
-    position: absolute;
-    left: 20px;
-    top: 55px;
-    font-size: 20px;
-    line-height: 18px;
-    letter-spacing: 1px;
-    color: #FFFFFF;
+    left: 70px;
+    top: 67px;
 }
 
 .logout {
@@ -389,6 +460,16 @@
 
 #box:target {
     display: block;
+}
+
+.tambah-button {
+    position: absolute;
+    left: 180px;
+
+    font-size: 40px;
+    style="font-size:50px; 
+    color:black; 
+    text-decoration:none;"
 }
 
 .batal {
