--- a/public/css/Perawat/PerawatStyle.css
+++ b/public/css/Perawat/PerawatStyle.css
@@ -2,108 +2,6 @@
     font-family: Metropolis, Arial, Helvetica, sans-serif;
 }
 
-.Lakesia-Logo {
-    position: absolute;
-    width: 180px;
-    height: 50px;
-    left: 62px;
-    top: 46px;
-}
-
-.Text-Menu {
-    position: absolute;
-    width: 252px;
-    height: 19px;
-    left: 115px;
-    top: 180px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 200;
-    font-size: 30px;
-    line-height: 108.1%;
-    letter-spacing: 0.05em;
-}
-
-.Background-Menu {
-    position: absolute;
-    width: 323px;
-    height: 450px;
-    border-radius: 8px;
-    left: 1px;
-    top: 120px;
-}
-
-.Background-Menu {
-    position: absolute;
-    width: 300px;
-    height: 450px;
-    border-radius: 8px;
-    left: 1px;
-    top: 120px;
-}
-
-.Background-grid2 {
-    position: absolute;
-    width: 300px;
-    height: 450px;
-    top: 120px;
-}
-
-.Background-grid3 {
-    position: absolute;
-    width: 300px;
-    height: 450px;
-    top: 120px;
-}
-
-.Background-grid4 {
-    position: absolute;
-    width: 300px;
-    height: 450px;
-    top: 120px;
-}
-
-.Button {
-    background-color: #1EA5FC;
-    border: none;
-    color: white;
-    padding: 17px 50px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 38px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    margin: 4px 2px;
-    cursor: pointer;
-    transition-duration: 0.4s;
-}
-
-.Button:hover {
-    background-color: #1c7ec0;
-    /* Green */
-    color: white;
-}
-
-.Riwayat-Pasien {
-    padding: 17px 29px;
-    position: relative;
-    font-size: 18px;
-    left: 39px;
-    right: 5%;
-    top: 20%;
-    bottom: -300px;
-}
-
-.Obat-Pasien {
-    padding: 17px 39px;
-    position: relative;
-    font-size: 18px;
-    left: 39px;
-    right: 5%;
-    top: 30%;
-    bottom: -320px;
-}
-
 .row:after {
     content: "";
     display: table;
@@ -477,4 +375,26 @@
     line-height: 18px;
     letter-spacing: 1px;
     color: #FFFFFF;
+}
+
+.daftar-nama-lansia {
+    position: absolute;
+    left: 350px;
+    top: 545px;
+}
+
+.header {
+    background-color: #1EA5FC;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: beige;
+}
+
+.tombol-tambah {
+    background-color:blue;
+    color:pink;
+    cursor: pointer;
 }
