--- a/public/css/CheckupSekarang/CheckUpSekarangStyle.css
+++ b/public/css/CheckupSekarang/CheckUpSekarangStyle.css
@@ -1,135 +1,321 @@
-    .Lakesia-Logo {
-        position: absolute;
-        width: 180px;
-        height: 50px;
-        left: 62px;
-        top: 46px;
+* {
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+}
+
+.Lakesia-Logo {
+    position: absolute;
+    width: 180px;
+    height: 50px;
+    left: 62px;
+    top: 46px;
+}
+    
+.List-Kontak1 {
+    position: absolute;
+    width: 800px;
+    height: 70px;
+    left: 62px;
+    top: 200px;
+}
+    
+.List-Kontak2 {
+    position: absolute;
+    width: 800px;
+    height: 70px;
+    left: 62px;
+    top: 300px;
+}
+    
+.List-Kontak3 {
+    position: absolute;
+    width: 800px;
+    height: 70px;
+    left: 62px;
+    top: 400px;
+}
+
+.whatsapp-tombol {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;"
+}
+
+.whatsapp-tombol:hover {
+    background-color: #3ea142;
+    cursor: pointer;
+}
+    
+.CheckUpSekarang-text {
+    position: absolute;
+    width: 553px;
+    height: 48px;
+    left: 62px;
+    top: 160px;
+
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 48px;
+    /* identical to box height */
+
+    letter-spacing: 1px;
+
+    color: #000000;
+}
+    
+.Button {
+    background-color: #77EA7E;
+    border: none;
+    color: white;
+    padding: 17px 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 38px;
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+    
+.Button:hover {
+    background-color: #0a990a;
+    /* Green */
+    color: white;
+}
+    
+.InfoKontak1 {
+    font-size: 12px;
+    position: relative;
+    width: 35px;
+    height: 10px;
+    left: 700px;
+    top: 200px;
     }
     
-    .List-Kontak1 {
-        position: absolute;
-        width: 800px;
-        height: 70px;
-        left: 62px;
-        top: 200px;
-    }
+.InfoKontak2 {
+    font-size: 12px;
+    position: relative;
+    width: 35px;
+    height: 10px;
+    left: 555px;
+    top: 300px;
+}
     
-    .List-Kontak2 {
-        position: absolute;
-        width: 800px;
-        height: 70px;
-        left: 62px;
-        top: 300px;
-    }
+.InfoKontak3 {
+    font-size: 12px;
+    position: relative;
+    width: 35px;
+    height: 10px;
+    left: 410px;
+    top: 400px;
+}
+
+.circle-profil {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 1400px;
+    top: 29px;
+
+    background: #FFC2F9;
+    border-radius: 100px;
+}
+
+.foto-profil {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 1400px;
+    top: 29px;
+}
+
+.box-name {
+    position: absolute;
+    width: 165px;
+    height: 27px;
+    left: 1227px;
+    top: 47px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.22);
+    box-sizing: border-box;
+    border-radius: 70px;
+
+    text-align: center;
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 150%;
+    /* or 15px */
+
+    letter-spacing: 1px;
+
+    color: rgba(0, 0, 0, 0.54);
+
+}
+
+.box-profil-1 {
+    position: absolute;
+    width: 445px;
+    height: 360px;
+    left: 1040px;
+    top: 100px;
+
+    background: #F2F3F7;
+    border-radius: 30px;
+}
+
+.data-diri {
+    position: absolute;
+    top: 170px;
+    left: 13px;
+
+    line-height: 17px;
+
+    font-size: 13px;
+    color: rgba(0, 0, 0, 0.61);
+}
+
+.judul-data-diri {
+    width: 120px;
+}
+
+.box-profil-2 {
+    position: absolute;
+    width: 445px;
+    height: 165px;
+    left: 1040px;
+    top: 100px;
+
+    background: linear-gradient(101.84deg, #8E97FD 2.78%, #6E3BFF 98.95%);
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+}
+
+.square-profil {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 343px;
+    top: 40px;
+
+    background: #FFC2F9;
+    border-radius: 100px;
+}
+
+.data-diri-singkat {
+    position: absolute;
+    top: 60px;
+    left: 20px;
+
+    letter-spacing: 1.5px;
+
+    color: #FFFFFF;
+}
+
+.data-nama {
+    font-size: 30px;
+
+    letter-spacing: 3.0px;
+}
+
+.box-cek-terakhir {
+    position: absolute;
+    width: 445px;
+    height: 100px;
+    left: 1040px;
+    top: 490px;
+
+    background: #A990DD;
+    border-radius: 30px;
+}
+
+.box-cek-berikut {
+    position: absolute;
+    width: 445px;
+    height: 100px;
+    left: 1040px;
+    top: 610px;
+
+    background: #87B9E7;
+    border-radius: 30px;
+}
+
+.cek-judul {
+    position: absolute;
+    left: 40px;
+    top: 18px;
+
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.date-logo {
+    position: absolute;
+    left: 40px;
+    top: 40px;
+}
+
+.tanggal-checkup{
+    position: absolute;
+    left: 70px;
+    top: 40px;
+}
+
+.clock-logo {
+    position: absolute;
+    left: 37px;
+    top: 65px;
+}
+
+.waktu-checkup{
+    position: absolute;
+    left: 70px;
+    top: 67px;
+}
+
+.logout {
+    left: 1400px;
+    top: 40px;
+}
     
-    .List-Kontak3 {
-        position: absolute;
-        width: 800px;
-        height: 70px;
-        left: 62px;
-        top: 400px;
-    }
+a {
+    cursor: pointer;
+}
     
-    .CheckUpSekarang-text {
-        position: absolute;
-        width: 415px;
-        height: 48px;
-        left: 62px;
-        top: 130px;
-        font-family: Metropolis;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 35px;
-        line-height: 48px;
-        /* identical to box height */
-        letter-spacing: 1px;
-        color: #000000;
-    }
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
     
-    .Button {
-        background-color: #77EA7E;
-        border: none;
-        color: white;
-        padding: 17px 50px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        border-radius: 38px;
-        font-family: Metropolis, Arial, Helvetica, sans-serif;
-        font-size: 24px;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-    }
-    
-    .Button:hover {
-        background-color: #0a990a;
-        /* Green */
-        color: white;
-    }
-    
-    .InfoKontak1 {
-        font-size: 12px;
-        position: relative;
-        width: 35px;
-        height: 10px;
-        left: 700px;
-        top: 200px;
-    }
-    
-    .InfoKontak2 {
-        font-size: 12px;
-        position: relative;
-        width: 35px;
-        height: 10px;
-        left: 555px;
-        top: 300px;
-    }
-    
-    .InfoKontak3 {
-        font-size: 12px;
-        position: relative;
-        width: 35px;
-        height: 10px;
-        left: 410px;
-        top: 400px;
-    }
-    
-    a {
-        text-decoration: none;
-        display: inline-block;
-        padding: 8px 16px;
-        font-size: 24px;
-        left: 41%;
-        top: 40%;
-    }
-    
-    a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-    
-    .previous {
-        background-color: #f1f1f1;
-        color: black;
-    }
-    
-    .round {
-        border-radius: 60%;
-    }
-    
-    .column {
-        float: left;
-        width: 33.33%;
-        padding: 15px;
-    }
-    
-    .circle-profil {
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        left: 1400px;
-        top: 40px;
-        background: #FFC2F9;
-        border-radius: 100px;
-    }
+.previous {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    font-size: 36px;
+    position: absolute;
+    left: 895px;
+    top: 155px;
+    cursor: pointer;
+
+    background-color: #f1f1f1;
+    color: black;
+
+    border-radius: 60%;
+}
+      
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+}
