--- a/public/css/CheckupSekarang/TableStyle.css
+++ b/public/css/CheckupSekarang/TableStyle.css
@@ -1,49 +1,70 @@
-    .tableperawat-tersedia-text {
-        position: absolute;
-        left: 5%;
-        top: 260px;
-        font-family: Metropolis, Arial, Helvetica, sans-serif;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 24px;
-        /* identical to box height */
-        letter-spacing: 1px;
-        color: #000000;
-    }
+.table-perawat-tersedia {
+    position: absolute;
+    left: 140px;
+    top: 330px;
+    width: 55%;
+
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 1px;
+    color: #000000;
+}
+
+.perawat-tersedia-text {
+    position: absolute;
+    width: 282px;
+    height: 24px;
+    left: 415px;
+    top: 260px;
     
-    .header {
-        background-color: #1EA5FC;
-        padding: 10px;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        color: beige;
-    }
+    font-family: Metropolis, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height */
     
-    .isirow {
-        background-color: #63b4eb;
-        padding: 10px;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        color: rgb(0, 0, 0);
-    }
+    letter-spacing: 1px;
     
-    .button {
-        background-color: #63b4eb;
-        font-style: normal;
-    }
+    color: #000000;
+}
     
-    .daftarnamalansia {
-        position: absolute;
-        left: 25%;
-        top: 460px;
-    }
+.header {
+    background-color: #1EA5FC;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: beige;
+}
     
-    .buttonWa {
-        background-color: #f1f1f1;
-        color: black;
-    }
+.isirow {
+    background-color: #63b4eb;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: rgb(0, 0, 0);
+}
+    
+.button {
+    background-color: #63b4eb;
+    font-style: normal;
+}
+    
+.daftarnamalansia {
+    position: absolute;
+    left: 25%;
+    top: 460px;
+}
+    
+.buttonWa {
+    background-color: #f1f1f1;
+    color: black;
+}
